Fixed missing background images

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -325,7 +325,7 @@ nav img {
     right: 0;
     bottom: 0;
     width: 100%;
-    background-image: url("var(--baseurl)/static/images/logo.png");
+    background-image: url("./images/logo.png");
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(8px);
@@ -953,7 +953,7 @@ form button:hover {
         right: 0;
         bottom: 0;
         width: 100%;
-        background-image: url("var(--baseurl)/static/images/markusspiske-code.jpg");
+        background-image: url("./images/markusspiske-code.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         filter: blur(8px);
@@ -974,7 +974,7 @@ form button:hover {
         right: 0;
         bottom: 0;
         width: 100%;
-        background-image: url("var(--baseurl)/static/images/portrait.jpg");
+        background-image: url("./images/portrait.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         filter: blur(8px);
@@ -990,7 +990,7 @@ form button:hover {
         right: 0;
         bottom: 0;
         width: 100%;
-        background-image: url("var(--baseurl)/static/images/code.png");
+        background-image: url("./images/code.png");
         background-repeat: no-repeat;
         background-size: cover;
         filter: blur(8px);
